--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ a {
 }
 
 .b-gauche {
-  display: hidden;
+  visibility: hidden;
   display: flex;
   justify-content: space-between;
   align-items: center;
