--- a/my-app/src/new_website/styles_css/fontStyle.css
+++ b/my-app/src/new_website/styles_css/fontStyle.css
@@ -11,6 +11,8 @@ body {
   height: 100vh;
   background-attachment: fixed;
   background-size: cover;
+
+  -moz-osx-font-smoothing: grayscale;
 }
 
 p {
