--- a/my-app/src/new_website/styles_css/containerStyle.module.css
+++ b/my-app/src/new_website/styles_css/containerStyle.module.css
@@ -1,11 +1,26 @@
 .container {
-    padding: 25px;
+    padding-top: 25px;
     padding-bottom: 0;
     display: flex;
     flex-flow: row wrap;
-    background: var(--background-container);
-    background-attachment: fixed;
-    background-size: cover;
     width: 100%;
     transition: all 0.4s ease-out;
+}
+
+.imgBack {
+    background: var(--background-container);
+    background-size: cover;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    z-index: -1;
+}
+
+.imgBackPhone {
+    background: var(--background-container-phone);
+    background-size: cover;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    z-index: -1;
 }
