--- a/my-app/src/new_website/styles_css/containerStyle.module.css
+++ b/my-app/src/new_website/styles_css/containerStyle.module.css
@@ -11,7 +11,8 @@
     background: var(--background-container);
     background-size: cover;
     position: fixed;
-    height: 100vh;
+    height: 105vh;
+    top: -5%;
     width: 100vw;
     z-index: -1;
 }
