--- a/src/new_website/styles_css/buttonStyle.module.css
+++ b/src/new_website/styles_css/buttonStyle.module.css
@@ -1,106 +1,92 @@
 .navigator {
-    display: flex;
-    justify-content: flex-start;
-    flex-flow: column nowrap;
-    height: fit-content;
-    flex: 1 2 100px;
-    margin: 200px 50px 50px 50px;
-    max-width: 250px;
-    top: 10%;
-    position: sticky;
+  display: flex;
+  justify-content: flex-start;
+  flex-flow: column nowrap;
+  height: fit-content;
+
+  max-width: 250px;
 }
 
 .ulNav {
-    max-width: 100%;
-}
-
-.h2Nav {
-    display: flex;
-    align-items: center;
-    height: 35px;
-    border: 1px solid white;
-    background-color: rgba(16, 81, 112, 0.9);
-    margin: 5px 0;
+  max-width: 100%;
 }
 
 .liNav {
-    display: flex;
-    align-items: center;
-    height: 35px;
-    padding: 10px;
-    margin: 5px 0;
-    transition: all 400ms ease-out;
-    border-bottom: 1px solid white;
-    background-color: rgba(16, 81, 112, 0.7);
-    text-decoration: none;
+  width: 100px;
+  height: 10px;
+  margin: 5px 0;
+  text-indent: -3000px;
+  transition: all 400ms ease-out;
+  border-bottom: 1px solid white;
+  background-color: rgba(16, 81, 112, 0.7);
+  text-decoration: none;
 }
 
 .liNavActif {
-    display: flex;
-    align-items: center;
-    height: 35px;
-    padding: 10px;
-    margin: 5px 0;
-    transition: all 400ms ease-out;
-    border-bottom: 1px solid white;
-    background-color: #56296ea9;
-    text-decoration: none;
+  width: 100px;
+  height: 10px;
+  margin: 5px 0;
+  text-indent: -3000px;
+  transition: all 400ms ease-out;
+  border-bottom: 1px solid white;
+  background-color: #56296ea9;
+  text-decoration: none;
 }
 
 .bDroite {
-    position: sticky;
-    top: 0;
-    z-index: 2;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    width: 100%;
-    background-color: var(--bandeau-color);
+  position: sticky;
+  top: 0;
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 100%;
+  background-color: var(--bandeau-color);
 }
 
 .bLangBox {
-    display: flex;
+  display: flex;
 }
 
 .bLang {
-    margin: 2px 5px;
-    padding: 0 5px;
-    width: fit-content;
-    margin-left: 2vw;
-    white-space: nowrap;
-    font-size: clamp(1rem, 1.8vw, 1.2rem);
-    color: grey;
+  margin: 2px 5px;
+  padding: 0 5px;
+  width: fit-content;
+  margin-left: 2vw;
+  white-space: nowrap;
+  font-size: clamp(1rem, 1.8vw, 1.2rem);
+  color: grey;
 }
 
 .bLangActive {
-    margin: 0 5px;
-    padding: 0 5px;
-    width: fit-content;
-    margin-left: 2vw;
-    white-space: nowrap;
-    font-size: clamp(1rem, 1.8vw, 1.2rem);
-    color: #56296e;
-    filter: brightness(1.3);
+  margin: 0 5px;
+  padding: 0 5px;
+  width: fit-content;
+  margin-left: 2vw;
+  white-space: nowrap;
+  font-size: clamp(1rem, 1.8vw, 1.2rem);
+  color: #56296e;
+  filter: brightness(1.3);
 }
 
 .bTheme {
-    display: flex;
-    position: relative;
-    padding: 0 10px;
-    white-space: nowrap;
-    font-size: clamp(1rem, 1.8vw, 1.2rem);
-    color: grey;
-    cursor: pointer;
-    color: #2b81ff;
-    border-radius: 10px;
-    background-color: #282828;
+  display: flex;
+  position: relative;
+  padding: 0 10px;
+  white-space: nowrap;
+  font-size: clamp(1rem, 1.8vw, 1.2rem);
+  color: grey;
+  cursor: pointer;
+  color: #2b81ff;
+  border-radius: 10px;
+  background-color: #282828;
 }
 
 .bSpringTest {
-    position: relative;
-    margin: 0 20px;
-    display: flex;
-    justify-content: flex-start;
-    border-radius: 10px;
-    background-color: whitesmoke;
+  position: relative;
+  margin: 0 20px;
+  display: flex;
+  justify-content: flex-start;
+  border-radius: 10px;
+  background-color: whitesmoke;
 }
