--- a/src/new_website/styles_css/buttonStyle.module.css
+++ b/src/new_website/styles_css/buttonStyle.module.css
@@ -3,34 +3,33 @@
   justify-content: flex-start;
   flex-flow: column nowrap;
   height: fit-content;
-
-  max-width: 250px;
-}
-
-.ulNav {
-  max-width: 100%;
+  width: 75px;
+  position: sticky;
+  top: 50%;
 }
 
 .liNav {
-  width: 100px;
-  height: 10px;
+  width: 100%;
+  height: 5px;
   margin: 5px 0;
   text-indent: -3000px;
   transition: all 400ms ease-out;
   border-bottom: 1px solid white;
   background-color: rgba(16, 81, 112, 0.7);
   text-decoration: none;
+  border-radius: 15px;
 }
 
 .liNavActif {
-  width: 100px;
-  height: 10px;
-  margin: 5px 0;
+  width: 100%;
+  height: 5px;
+  margin: 10px 0;
   text-indent: -3000px;
   transition: all 400ms ease-out;
   border-bottom: 1px solid white;
   background-color: #56296ea9;
   text-decoration: none;
+  border-radius: 15px;
 }
 
 .bDroite {
