--- a/src/new_website/styles_css/buttonStyle.module.css
+++ b/src/new_website/styles_css/buttonStyle.module.css
@@ -6,45 +6,44 @@
   width: 75px;
   position: sticky;
   top: 50%;
+  z-index: 2;
 }
 
 .liNav {
   width: 100%;
-  height: 5px;
-  margin: 5px 0;
+  height: 7px;
+  margin: 3px 0;
   text-indent: -3000px;
   transition: all 400ms ease-out;
-  border-bottom: 1px solid white;
-  background-color: rgba(16, 81, 112, 0.7);
+  background: var(--navigator-background);
   text-decoration: none;
   border-radius: 15px;
 }
 
 .liNavActif {
   width: 100%;
-  height: 5px;
+  height: 7px;
   margin: 10px 0;
   text-indent: -3000px;
   transition: all 400ms ease-out;
-  border-bottom: 1px solid white;
   background-color: #56296ea9;
   text-decoration: none;
   border-radius: 15px;
 }
 
 .bDroite {
-  position: sticky;
-  top: 0;
+  position: fixed;
+  right: 5%;
+  bottom: 1%;
   z-index: 2;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  width: 100%;
-  background-color: var(--bandeau-color);
+  justify-content: space-around;
 }
 
 .bLangBox {
   display: flex;
+  border-radius: 15px;
 }
 
 .bLang {
@@ -53,19 +52,26 @@
   width: fit-content;
   margin-left: 2vw;
   white-space: nowrap;
-  font-size: clamp(1rem, 1.8vw, 1.2rem);
-  color: grey;
+  font-size: clamp(0.8rem, 1.5vw, 1rem);
+  color: var(--lang-color);
+  background: var(--lang-background-color);
+  filter: opacity(90%);
+  border-color: transparent;
+  border-radius: 15px;
+  transition: all 0.2s ease-out;
 }
 
 .bLangActive {
-  margin: 0 5px;
+  margin: 2px 5px;
   padding: 0 5px;
   width: fit-content;
   margin-left: 2vw;
   white-space: nowrap;
-  font-size: clamp(1rem, 1.8vw, 1.2rem);
+  font-size: clamp(0.8rem, 1.5vw, 1rem);
   color: #56296e;
   filter: brightness(1.3);
+  border-radius: 15px;
+  border-color: transparent;
 }
 
 .bTheme {
@@ -73,12 +79,13 @@
   position: relative;
   padding: 0 10px;
   white-space: nowrap;
-  font-size: clamp(1rem, 1.8vw, 1.2rem);
+  font-size: clamp(0.8rem, 1.5vw, 1rem);
   color: grey;
   cursor: pointer;
   color: #2b81ff;
   border-radius: 10px;
   background-color: #282828;
+  height: 25px;
 }
 
 .bSpringTest {
@@ -87,5 +94,5 @@
   display: flex;
   justify-content: flex-start;
   border-radius: 10px;
-  background-color: whitesmoke;
+  background: #d4e6ed;
 }
