--- a/src/new_website/styles_css/mainStyle.module.css
+++ b/src/new_website/styles_css/mainStyle.module.css
@@ -16,6 +16,9 @@
   --logo-background: transparent;
   --project-background-color: #fafafa;
   --footer-background-color: #434343;
+  --navigator-background: #2b81ff;
+  --lang-color: rgb(78, 78, 78);
+  --lang-background-color: linear-gradient(45deg, #d8d2cf, #d4e6ed);
 }
 
 [data-theme="dark"] {
@@ -36,6 +39,9 @@
   --logo-background: #ebebeb;
   --project-background-color: transparent;
   --footer-background-color: #343539;
+  --navigator-background: #fafafa;
+  --lang-color: #fff;
+  --lang-background-color: linear-gradient(45deg, #4c4947, #1a3742);
 }
 
 .main {
@@ -48,12 +54,14 @@
   height: 100%;
 }
 
+.titlesBox {
+  display: block;
+}
+
 .titles {
   font-size: 1.5rem;
+  width: 200px;
   padding: 0 5px;
-  width: 150px;
-  max-width: 15%;
-  height: fit-content;
   color: var(--font-color);
   border-color: var(--title-border-color);
 }
@@ -63,7 +71,7 @@
   flex-flow: row nowrap;
   align-items: flex-start;
   width: 100%;
-  height: 93vh;
+  height: 99vh;
   margin: 5rem 0;
   border: 1px solid blue;
 }
@@ -73,7 +81,7 @@
   flex-flow: row nowrap;
   max-width: 100%;
   padding-right: 3rem;
-  height: 90%;
+  height: 93%;
 }
 
 .workBigBox {
@@ -81,7 +89,7 @@
   flex-flow: row nowrap;
   align-items: flex-start;
   width: 100%;
-  height: 93vh;
+  height: 99vh;
   margin: 5rem 0;
   border: 1px solid blue;
 }
@@ -89,9 +97,20 @@
 .workSmallBox {
   display: flex;
   flex-flow: row nowrap;
+  justify-content: center;
   max-width: 100%;
   padding-right: 3rem;
   height: 90%;
+}
+
+.projectBigBox {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: flex-start;
+  width: 100%;
+  height: 99vh;
+  margin: 5rem 0;
+  border: 1px solid blue;
 }
 
 .content1 {
@@ -204,8 +223,9 @@
   max-width: 500px;
   margin: 1rem;
   padding: 0.5rem;
-  height: 90%;
+  height: 95%;
   border: 1px solid red;
+  overflow: hidden;
 }
 
 .ulSchoolWork {
@@ -232,6 +252,7 @@
   justify-content: space-between;
   align-items: center;
   height: 100px;
+  border: 1px solid blue;
 }
 
 .pLsyImg {
@@ -260,11 +281,11 @@
 
 .liMajorSchool {
   color: var(--font-color);
-  line-height: 1.5rem;
+  line-height: 1.3rem;
   font-weight: 600;
   filter: drop-shadow(10px 5px 0.2rem rgba(69, 69, 69, 0.2));
   margin-bottom: 1rem;
-  height: 80px;
+  height: 60px;
 }
 
 .liProf {
@@ -292,16 +313,16 @@
   font-weight: 600;
   filter: drop-shadow(10px 5px 0.2rem rgba(69, 69, 69, 0.5));
   margin: 0.8rem 0 0.5rem 0;
-  padding: 10px 0;
   border-bottom: 1px solid;
   border-color: var(--title-border-color);
+  height: 80px;
 }
 
 .liDuree {
   color: var(--font-color);
-  line-height: 1.5rem;
+  line-height: 1.3rem;
   font-weight: 600;
   filter: drop-shadow(10px 5px 0.2rem rgba(69, 69, 69, 0.2));
-  margin: 1rem 0;
-  height: 30px;
+  margin: 0.8rem 0;
+  height: 80px;
 }
