--- a/src/new_website/styles_css/projectStyle.module.css
+++ b/src/new_website/styles_css/projectStyle.module.css
@@ -1,110 +1,131 @@
 .project {
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: auto;
-    padding: 1.5rem 0;
-    margin-bottom: 1rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-flow: column nowrap;
+  flex: 1 1 200px;
+  margin-bottom: 0.5rem 0;
+  padding: 0.5rem;
+  width: 100%;
+  height: 95%;
+  border: 1px solid red;
 }
 
 .projectBox {
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
-    width: 85%;
-    border: 1px solid #dadada;
-    background-color: var(--project-background-color);
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #dadada;
+  background-color: var(--project-background-color);
 }
 
-.projectAllImgDiv {
-    display: inline-flex;
-    align-items: center;
+.projectAllImgVidDiv {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-around;
+  align-items: flex-start;
+  border: 1px solid purple;
+  width: 60%;
+  min-height: 95%;
+}
+
+.projectImgBox {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
 }
 
 .projectPhotoBox {
-    width: 45%;
-    margin: 2rem auto;
-    background-color: #fafafa;
+  width: 50%;
+  margin: 1rem auto;
+  background-color: #fafafa;
 }
 
 .projectPhoto {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
 }
 
 .projectPhotoLegend {
-    text-align: center;
+  text-align: center;
+  font-size: 0.9rem;
 }
 
 .projectVideo {
-    width: 80%;
-    height: auto;
-    margin: 2rem auto;
+  width: 80%;
+  margin: 0.5rem auto;
 }
 
 .projectTitle {
-    font-size: 1.2rem;
-    margin: 1rem auto;
-    padding: 1rem 0;
-    text-align: center;
-    border-top: 1px solid;
-    border-color: var(--info-border-color);
-    color: var(--font-color);
-    filter: drop-shadow(10px 5px 0.2rem rgba(69, 69, 69, 0.5));
+  font-size: 1.2rem;
+  text-align: center;
+  margin-bottom: 0.5rem;
+  padding: 0;
+  color: var(--font-color);
+  filter: drop-shadow(10px 5px 0.2rem rgba(69, 69, 69, 0.5));
+}
+
+.projectDescriptionBox {
+  width: 40%;
+  border: 1px solid red;
+  height: 95%;
 }
 
 .projectExpl {
-    width: 75%;
-    color: var(--font-color);
-    line-height: 1.5rem;
-    padding: 0.6rem 0.5rem;
-    text-align: justify;
+  width: 90%;
+  color: var(--font-color);
+  line-height: 1.2rem;
+  padding: 0.6rem 0.5rem;
+  text-align: justify;
 }
 
 .projectAbstractTitle {
-    font-size: 1.2rem;
-    font-weight: 600;
-    margin: 1rem auto;
-    width: fit-content;
-    color: var(--font-color);
-    line-height: 1.5rem;
-    padding: 0.6rem 0.5rem;
-    filter: drop-shadow(10px 5px 0.2rem rgba(69, 69, 69, 0.5));
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin: 1rem auto;
+  width: fit-content;
+  color: var(--font-color);
+  line-height: 1.5rem;
+  padding: 0.6rem 0.5rem;
+  filter: drop-shadow(10px 5px 0.2rem rgba(69, 69, 69, 0.5));
 }
 
 .projectAbstract {
-    display: none;
-    width: 75%;
-    color: var(--font-color);
-    line-height: 1.5rem;
-    padding: 0.6rem 0.5rem;
-    text-align: start;
+  display: none;
+  width: 90%;
+  text-align: justify;
+  color: var(--font-color);
+  line-height: 1.5rem;
+  padding: 0.6rem 0.5rem;
+  font-size: 1.2rem;
 }
 
 .projectAbstractAppButton {
-    width: fit-content;
-    color: var(--font-color-reverse);
-    line-height: 1.5rem;
-    margin-top: 0.5rem;
-    margin-left: 4rem;
-    padding: 0.6rem;
-    align-self: start;
-    background-color: var(--info-border-color);
-    border-radius: 25px;
+  width: fit-content;
+  color: var(--font-color-reverse);
+  line-height: 1.5rem;
+  margin-top: 0.5rem;
+  margin-left: 4rem;
+  padding: 0.6rem;
+  align-self: start;
+  background-color: var(--info-border-color);
+  border-radius: 25px;
+  font-size: 1rem;
 }
 
 .projectAbstractDisButton {
-    display: none;
-    width: fit-content;
-    color: var(--font-color-reverse);
-    line-height: 1.5rem;
-    margin-top: 0.5rem;
-    margin-left: 4rem;
-    padding: 0.6rem;
-    align-self: start;
-    background-color: var(--info-border-color);
-    border-radius: 25px;
+  display: none;
+  width: fit-content;
+  color: #282828;
+  line-height: 1.5rem;
+  margin-top: 0.5rem;
+  margin-left: 4rem;
+  padding: 0.6rem;
+  align-self: start;
+  background-color: #fff;
+  border-radius: 25px;
 }
