--- a/src/new_website/styles_css/mainStyle.module.css
+++ b/src/new_website/styles_css/mainStyle.module.css
@@ -1,11 +1,14 @@
 :root {
-  --font-color: #282828;
+  --font-color: #1e1e1e;
+  --contrast-color: 1;
+  --title-color: rgb(78, 78, 78);
   --font-color-reverse: #fff;
   --background-container: linear-gradient(
       rgba(255, 255, 255, 0.85),
       rgba(255, 255, 255, 0.85)
     ),
     url("./CBNUphoto_3936x2624_20230712164125.jpg");
+  --background-color-project: #fff;
   --title-border-color: #d9d9d9;
   --info-border-color: #282828;
   --bandeau-color: whitesmoke;
@@ -22,13 +25,16 @@
 }
 
 [data-theme="dark"] {
-  --font-color: #fff;
-  --font-color-reverse: #282828;
+  --font-color: #f1f1f1;
+  --contrast-color: 0.87;
+  --title-color: #bb86fc;
+  --font-color-reverse: #1e1e1e;
   --background-container: linear-gradient(
-      rgba(19, 19, 19, 0.7),
-      rgba(22, 22, 22, 0.7)
+      rgba(19, 19, 19, 0.95),
+      rgba(41, 41, 41, 0.95)
     ),
     url("./CBNUphoto_3936x2624_20230712164125.jpg");
+  --background-color-project: #383838;
   --title-border-color: #fff;
   --info-border-color: #fff;
   --bandeau-color: whitesmoke;
@@ -63,6 +69,7 @@
   width: 200px;
   padding: 0 5px;
   color: var(--font-color);
+  opacity: var(--contrast-color);
   border-color: var(--title-border-color);
 }
 
@@ -244,6 +251,7 @@
   align-self: flex-end;
   font-size: 1rem;
   color: var(--font-color);
+  opacity: var(--contrast-color);
 }
 
 .imgContainer {
@@ -270,6 +278,7 @@
   text-align: left;
   font-size: 1.2rem;
   color: var(--font-color);
+  opacity: var(--contrast-color);
   line-height: 1.5rem;
   font-weight: 600;
   filter: drop-shadow(10px 5px 0.2rem rgba(69, 69, 69, 0.5));
@@ -281,6 +290,7 @@
 
 .liMajorSchool {
   color: var(--font-color);
+  opacity: var(--contrast-color);
   line-height: 1.3rem;
   font-weight: 600;
   filter: drop-shadow(10px 5px 0.2rem rgba(69, 69, 69, 0.2));
@@ -290,6 +300,7 @@
 
 .liProf {
   color: var(--font-color);
+  opacity: var(--contrast-color);
   line-height: 1.5rem;
   font-weight: 600;
   filter: drop-shadow(10px 5px 0.2rem rgba(69, 69, 69, 0.3));
@@ -300,6 +311,7 @@
   width: 100%;
   text-align: left;
   color: var(--font-color);
+  opacity: var(--contrast-color);
   line-height: 1.8rem;
   padding: 0.5rem 0;
 }
@@ -309,6 +321,7 @@
   text-align: left;
   font-size: 1.2rem;
   color: var(--font-color);
+  opacity: var(--contrast-color);
   line-height: 1.5rem;
   font-weight: 600;
   filter: drop-shadow(10px 5px 0.2rem rgba(69, 69, 69, 0.5));
@@ -320,6 +333,7 @@
 
 .liDuree {
   color: var(--font-color);
+  opacity: var(--contrast-color);
   line-height: 1.3rem;
   font-weight: 600;
   filter: drop-shadow(10px 5px 0.2rem rgba(69, 69, 69, 0.2));
