--- a/src/new_website/styles_css/mainStyle.module.css
+++ b/src/new_website/styles_css/mainStyle.module.css
@@ -54,7 +54,7 @@
   display: flex;
   flex-flow: column nowrap;
   flex: 1 1;
-  margin-top: 5rem;
+  margin-top: 1rem;
   padding: 1rem;
   min-width: 250px;
   height: 100%;
@@ -67,10 +67,21 @@
 .titles {
   font-size: 1.5rem;
   width: 200px;
+  margin-top: 3rem;
   padding: 0 5px;
   color: var(--font-color);
   opacity: var(--contrast-color);
   border-color: var(--title-border-color);
+}
+
+.presentationBigBox {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: flex-start;
+  width: 100%;
+  height: 99vh;
+  margin: 5rem 0;
+  border: 1px solid blue;
 }
 
 .schoolBigBox {
@@ -80,15 +91,23 @@
   width: 100%;
   height: 99vh;
   margin: 5rem 0;
-  border: 1px solid blue;
 }
 
 .schoolSmallBox {
   display: flex;
   flex-flow: row nowrap;
+  flex: 1;
   max-width: 100%;
-  padding-right: 3rem;
+  padding-right: 2rem;
   height: 93%;
+}
+
+.schoolPack2 {
+  display: flex;
+  justify-content: center;
+  flex: 1;
+  margin-bottom: 10px;
+  height: 100%;
 }
 
 .workBigBox {
@@ -98,7 +117,6 @@
   width: 100%;
   height: 99vh;
   margin: 5rem 0;
-  border: 1px solid blue;
 }
 
 .workSmallBox {
@@ -117,22 +135,32 @@
   width: 100%;
   height: 99vh;
   margin: 5rem 0;
-  border: 1px solid blue;
 }
 
 .content1 {
   display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
+  flex-flow: row nowrap;
+  justify-content: space-around;
   align-items: center;
   width: 100%;
-  height: auto;
-  padding: 1.5rem 0;
+  height: 93%;
+  margin-left: 120px;
   margin-bottom: 1rem;
-  background: var(--content1-background);
+  background: inherit;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+}
+
+.content1Left {
+  display: flex;
+  width: 40%;
+  border: 1px solid red;
+}
+
+.content1Right {
+  width: 40%;
+  border: 1px solid red;
 }
 
 .content1Title {
@@ -195,7 +223,6 @@
 .transitionTest {
   transition: opacity 0.4s ease-in;
   opacity: 0;
-  border: 10px solid red;
 }
 
 .bulletUL {
@@ -226,12 +253,12 @@
   display: flex;
   justify-content: flex-start;
   flex-flow: column nowrap;
-  flex: 1 1 200px;
-  max-width: 500px;
-  margin: 1rem;
+  flex: 1 1 25%;
+  max-width: 50%;
+  margin: 1rem 0.5rem;
   padding: 0.5rem;
   height: 95%;
-  border: 1px solid red;
+  border: 1px solid rgb(170, 149, 149);
   overflow: hidden;
 }
 
@@ -260,7 +287,6 @@
   justify-content: space-between;
   align-items: center;
   height: 100px;
-  border: 1px solid blue;
 }
 
 .pLsyImg {
