--- a/src/new_website/styles_css/mainStyle.module.css
+++ b/src/new_website/styles_css/mainStyle.module.css
@@ -6,8 +6,7 @@
   --background-container: linear-gradient(
       rgba(255, 255, 255, 0.85),
       rgba(255, 255, 255, 0.85)
-    ),
-    url("./CBNUphoto_3936x2624_20230712164125.jpg");
+    )
   --background-color-project: #fff;
   --title-border-color: #d9d9d9;
   --info-border-color: #282828;
@@ -135,117 +134,6 @@
   width: 100%;
   height: 99vh;
   margin: 5rem 0;
-}
-
-.content1 {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  height: 93%;
-  margin-left: 120px;
-  margin-bottom: 1rem;
-  background: inherit;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.content1Left {
-  display: flex;
-  width: 40%;
-  border: 1px solid red;
-}
-
-.content1Right {
-  width: 40%;
-  border: 1px solid red;
-}
-
-.content1Title {
-  width: 90%;
-  color: #fff;
-  padding-left: 0.5rem;
-  text-align: center;
-  font-size: 1.8rem;
-  margin: 1rem auto;
-  padding: 1rem 0;
-  border-bottom: 1px solid #d9d9d9;
-}
-
-.content1H2 {
-  position: relative;
-  left: 10%;
-  margin: 1rem 0;
-  padding: 10px;
-  width: 70%;
-  color: #fff;
-  font-weight: 500;
-  font-size: 1.2rem;
-  height: 85px;
-}
-
-.content1Nom {
-  width: fit-content;
-  z-index: 1;
-  font-size: 25px;
-  padding: 0.2rem;
-  margin: 0.5rem 1rem 0 1rem;
-  border-bottom: 1px solid whitesmoke;
-  color: #fff;
-  font-weight: 500;
-  background-color: rgba(63, 63, 74, 0.7);
-  line-height: 1.7rem;
-}
-
-.content1PhotoBox {
-  position: relative;
-  margin: 2rem;
-  overflow: hidden;
-  width: 80%;
-  height: 35rem;
-  max-height: 35rem;
-  border-radius: 100px;
-  max-width: 900px;
-}
-
-.content1Photo {
-  position: absolute;
-  top: -10rem;
-  left: 0;
-  will-change: opacity;
-  transform: scale(1.4);
-  width: 100%;
-  height: auto;
-}
-
-.transitionTest {
-  transition: opacity 0.4s ease-in;
-  opacity: 0;
-}
-
-.bulletUL {
-  margin-top: 1rem;
-  display: inline-flex;
-  list-style: none;
-}
-
-.bulletLi {
-  font-size: 10px;
-  text-indent: -3000px;
-  display: inline-block;
-  position: relative;
-  border-radius: 10px;
-  width: 3px;
-  height: 3px;
-  margin: 0 3px;
-  cursor: pointer;
-  background: #fafafa;
-}
-
-.bulletLiOn {
-  background: #56296e;
 }
 
 .content2,
