--- a/src/new_website/styles_css/projectStyle.module.css
+++ b/src/new_website/styles_css/projectStyle.module.css
@@ -65,7 +65,7 @@
 .projectTitle {
   font-size: 1.2rem;
   text-align: center;
-  margin-bottom: 0.5rem;
+  margin: 0.5rem 0;
   padding: 0;
   color: var(--font-color);
   opacity: var(--contrast-color);
@@ -89,6 +89,7 @@
   opacity: var(--contrast-color);
   line-height: 1.2rem;
   padding: 0.6rem 0.5rem;
+  margin: 0.4rem;
   text-align: justify;
 }
 
@@ -126,7 +127,7 @@
   align-self: start;
   background-color: var(--info-border-color);
   border-radius: 25px;
-  font-size: 1rem;
+  font-size: 1.1rem;
 }
 
 .projectAbstractDisButton {
@@ -140,4 +141,5 @@
   align-self: start;
   background-color: #fff;
   border-radius: 25px;
+  font-size: 1.1rem;
 }
