--- a/src/new_website/styles_css/mainStyle.module.css
+++ b/src/new_website/styles_css/mainStyle.module.css
@@ -53,8 +53,8 @@
   display: flex;
   flex-flow: column nowrap;
   flex: 1 1;
-  margin-top: 1rem;
-  padding: 1rem;
+  margin-top: 0rem;
+  padding: 0 1rem 1rem 1rem;
   min-width: 250px;
   height: 100%;
 }
@@ -79,7 +79,7 @@
   align-items: flex-start;
   width: 100%;
   height: 99vh;
-  margin: 5rem 0;
+  margin-bottom: 5rem;
   border: 1px solid blue;
 }
 
