--- a/src/new_website/styles_css/content1.module.css
+++ b/src/new_website/styles_css/content1.module.css
@@ -7,6 +7,7 @@
   max-width: 100%;
   height: 93%;
   margin: 1rem 0 1rem 120px;
+  border: 1px solid red;
 }
 
 .content1Left {
@@ -31,7 +32,6 @@
 
 .content1Nom {
   width: fit-content;
-  font-size: 4.5rem;
   border-bottom: 1px solid whitesmoke;
   color: var(--font-color);
   line-height: 5rem;
@@ -43,7 +43,7 @@
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  height: 30%;
+  height: 50%;
 }
 
 .content1Description {
