--- a/src/new_website/styles_css/content1.module.css
+++ b/src/new_website/styles_css/content1.module.css
@@ -1,12 +1,21 @@
 .content1 {
   display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-between;
-  align-items: center;
+  flex-flow: column nowrap;
+  justify-content: space-around;
+  align-items: flex-start;
   flex: 1;
   max-width: 100%;
   height: 93%;
   margin: 1rem 0 1rem 120px;
+}
+
+.content1SmallBox {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+  align-items: center;
+  height: 90%;
+  width: 100%;
   border: 1px solid red;
 }
 
@@ -44,6 +53,7 @@
   flex-flow: column nowrap;
   align-items: center;
   height: 50%;
+  width: 100%;
 }
 
 .content1Description {
@@ -118,17 +128,19 @@
   justify-content: flex-start;
   align-items: center;
   width: 40%;
-  height: 90%;
+  height: 110%;
+
+  border: 1px solid red;
 }
 
 .content1PhotoBox {
   position: relative;
-  margin: 2rem;
+  margin: 1rem 2rem;
   padding: 1rem;
   overflow: hidden;
   width: 80%;
   min-width: 400px;
-  height: 80%;
+  height: 90%;
   max-height: 35rem;
   border-radius: 100px;
   max-width: 900px;
