--- a/src/new_website/styles_css/buttonStyle.module.css
+++ b/src/new_website/styles_css/buttonStyle.module.css
@@ -31,11 +31,11 @@
   border-radius: 15px;
 }
 
-.bDroite {
+.bandeau {
   position: fixed;
   right: 5%;
   bottom: 1%;
-  z-index: 2;
+  z-index: 5;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -88,7 +88,7 @@
   height: 25px;
 }
 
-.bSpringTest {
+.themeButton {
   position: relative;
   margin: 0 20px;
   display: flex;
