--- a/src/new_website/styles_css/mainStyle.module.css
+++ b/src/new_website/styles_css/mainStyle.module.css
@@ -90,6 +90,7 @@
   width: 100%;
   height: 99vh;
   margin: 5rem 0;
+  border: 1px solid blue;
 }
 
 .schoolSmallBox {
@@ -99,6 +100,7 @@
   max-width: 100%;
   padding-right: 2rem;
   height: 93%;
+  border: 1px solid red;
 }
 
 .schoolPack2 {
@@ -108,6 +110,7 @@
   flex: 1;
   margin-bottom: 10px;
   height: 100%;
+  border: 1px solid green;
 }
 
 .workBigBox {
