--- a/src/new_website/styles_css/mainStyle.module.css
+++ b/src/new_website/styles_css/mainStyle.module.css
@@ -60,14 +60,15 @@
 }
 
 .titlesBox {
-  display: block;
+  max-width: 180px;
+  margin-top: 3rem;
+  padding: 0 5px;
+  flex: 1 1 100px;
 }
 
 .titles {
   font-size: 1.5rem;
-  width: 200px;
-  margin-top: 3rem;
-  padding: 0 5px;
+
   color: var(--font-color);
   opacity: var(--contrast-color);
   border-color: var(--title-border-color);
@@ -100,7 +101,6 @@
   max-width: 100%;
   padding-right: 2rem;
   height: 93%;
-  border: 1px solid red;
 }
 
 .schoolPack2 {
@@ -110,7 +110,6 @@
   flex: 1;
   margin-bottom: 10px;
   height: 100%;
-  border: 1px solid green;
 }
 
 .workBigBox {
@@ -120,6 +119,7 @@
   width: 100%;
   height: 99vh;
   margin: 5rem 0;
+  border: 1px solid blue;
 }
 
 .workSmallBox {
@@ -142,6 +142,7 @@
 
 .content2,
 .content3 {
+  position: relative;
   display: flex;
   justify-content: flex-start;
   flex-flow: column nowrap;
@@ -255,6 +256,6 @@
   line-height: 1.3rem;
   font-weight: 600;
   filter: drop-shadow(10px 5px 0.2rem rgba(69, 69, 69, 0.2));
-  margin: 0.8rem 0;
+  margin-bottom: 1rem;
   height: 80px;
 }
