--- a/src/new_website/styles_css/content1.module.css
+++ b/src/new_website/styles_css/content1.module.css
@@ -49,7 +49,9 @@
 
 .content1DescriptionBox {
   display: flex;
+  position: relative;
   flex-flow: column nowrap;
+  justify-content: space-around;
   align-items: center;
   height: 50%;
   width: 100%;
@@ -58,7 +60,7 @@
 .content1Description {
   padding: 10px;
   width: 80%;
-  height: 50%;
+  height: 20%;
   color: var(--font-color);
   font-weight: 500;
   font-size: 1.2rem;
@@ -66,6 +68,7 @@
 
 .footerGauche {
   display: flex;
+  position: relative;
   flex-flow: column nowrap;
   font-size: 1rem;
   margin: 2px 1rem;
@@ -149,7 +152,11 @@
   inset: 0;
   border-radius: 100px;
   padding: 5px;
-  background: linear-gradient(45deg, #8b45e0, #2b81ff);
+  background: linear-gradient(
+    45deg,
+    var(--navigator-background),
+    var(--navigator-background-actif)
+  );
   mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
   mask-composite: xor;
   z-index: 2;
@@ -170,9 +177,9 @@
   height: 15px;
   margin: 0 3px;
   cursor: pointer;
-  background: #2b81ff;
+  background: var(--navigator-background);
 }
 
 .bulletLiOn {
-  background: #bb86fc;
+  background: var(--navigator-background-actif);
 }
