--- a/src/new_website/styles_css/projectStyle.module.css
+++ b/src/new_website/styles_css/projectStyle.module.css
@@ -79,7 +79,7 @@
   width: 40%;
   border: 1px solid;
   border-color: var(--background-color-project);
-  height: 95%;
+  height: 100%;
   background: var(--background-color-project);
 }
 
@@ -121,8 +121,8 @@
   color: var(--font-color-reverse);
   opacity: var(--contrast-color);
   line-height: 1.5rem;
-  margin-top: 0.5rem;
-  margin-left: 4rem;
+  margin: 0.5rem 0 1rem 4rem;
+
   padding: 0.6rem;
   align-self: start;
   background-color: var(--info-border-color);
