--- a/src/new_website/styles_css/projectStyle.module.css
+++ b/src/new_website/styles_css/projectStyle.module.css
@@ -8,6 +8,7 @@
   padding: 0.5rem;
   width: 100%;
   height: 95%;
+  background: var(--primary-color);
 }
 
 .projectBox {
@@ -17,8 +18,8 @@
   align-items: flex-start;
   width: 100%;
   height: 100%;
-  border: 1px solid #dadada;
-  background-color: var(--project-background-color);
+  border: 1px solid var(--title-border-color);
+  background: var(--primary-container-color);
 }
 
 .projectAllImgVidDiv {
@@ -80,7 +81,7 @@
   border: 1px solid;
   border-color: var(--background-color-project);
   height: 100%;
-  background: var(--background-color-project);
+  background: var(--primary-container-color-project);
 }
 
 .projectExpl {
@@ -122,7 +123,6 @@
   opacity: var(--contrast-color);
   line-height: 1.5rem;
   margin: 0.5rem 0 1rem 4rem;
-
   padding: 0.6rem;
   align-self: start;
   background-color: var(--info-border-color);
