--- a/src/new_website/styles_css/content1.module.css
+++ b/src/new_website/styles_css/content1.module.css
@@ -58,6 +58,7 @@
 }
 
 .content1Description {
+  margin: 10px;
   padding: 10px;
   width: 80%;
   height: 20%;
@@ -76,7 +77,8 @@
   width: 60%;
   max-width: 450px;
   min-width: 350px;
-  border: 1px solid #dadada;
+  border: 1px solid var(--primary-container-border-color);
+  border-radius: 10px;
 }
 
 .footerSmallDiv {
@@ -141,6 +143,7 @@
 
 .content1Right {
   display: flex;
+  position: relative;
   flex-flow: column nowrap;
   justify-content: flex-start;
   align-items: center;
