--- a/src/new_website/styles_css/projectStyle.module.css
+++ b/src/new_website/styles_css/projectStyle.module.css
@@ -18,7 +18,7 @@
   align-items: flex-start;
   width: 100%;
   height: 100%;
-  border: 1px solid var(--title-border-color);
+  border: 1px solid var(--primary-container-border-color);
   background: var(--primary-container-color);
 }
 
