Animation improved, maybe meta tag??

--- a/src/new_website/styles_css/containerStyle.module.css
+++ b/src/new_website/styles_css/containerStyle.module.css
@@ -13,3 +13,13 @@
   width: 110vw;
   z-index: -1;
 }
+
+.divLottie {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 30;
+  background: var(--primary-container-color-project);
+}
