--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,7 +6,8 @@
   margin: 0;
   padding: 0;
 
-  color-scheme: light;
+  color-scheme: dark;
+  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
