--- a/src/css/index.css
+++ b/src/css/index.css
@@ -13,6 +13,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  interpolate-size: allow-keywords;
 }
 
 body {
