--- a/src/css/index.css
+++ b/src/css/index.css
@@ -20,11 +20,15 @@
 }
 
 body {
-  background-color: #fafafb;
+  background-color: #242424;
 }
 
 .no-scrollbar::-webkit-scrollbar {
   display: none;
+}
+
+ul > li {
+  margin-bottom: 4px;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
@@ -39,7 +43,7 @@ body {
   padding: 0.5px 2px;
 }
 
-.gradient-border {
+.gradient-border-center {
   background: linear-gradient(
     to left,
     transparent 0%,
@@ -49,7 +53,7 @@ body {
   );
 }
 
-.gradient-border::before {
+.gradient-border-center::before {
   content: "";
   position: absolute;
   top: 0;
@@ -65,8 +69,22 @@ body {
   );
   z-index: -1;
 }
+.gradient-border-to-right {
+  background: linear-gradient(to right, white 10%, transparent);
+}
 
-.test {
+.gradient-border-to-right::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 2px; /* Border thickness */
+  background: linear-gradient(to right, white 10%, transparent);
+  z-index: -1;
+}
+
+.gradient-border-pp {
   border: 2px solid transparent;
   background-image: linear-gradient(#242424, #242424),
     linear-gradient(
