--- a/src/css/index.css
+++ b/src/css/index.css
@@ -100,3 +100,83 @@ ul > li {
   background-origin: border-box;
   background-clip: content-box, border-box;
 }
+
+@keyframes wave-1 {
+  0% {
+    transform: translateX(20%);
+    opacity: 1;
+  }
+  49% {
+    transform: translateX(calc(-200% - 40px));
+    opacity: 1;
+  }
+  50% {
+    transform: translateX(calc(-200% - 40px));
+    opacity: 0;
+  }
+  51% {
+    transform: translateX(calc(200% + 40px));
+    opacity: 0;
+  }
+  59% {
+    transform: translateX(calc(200% + 40px));
+    opacity: 0;
+  }
+  60% {
+    transform: translateX(calc(200% + 40px));
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(20%);
+    opacity: 1;
+  }
+}
+
+@keyframes wave-2 {
+  0% {
+    transform: translateX(calc(-200% - 40px - 20%));
+    opacity: 0;
+  }
+  1% {
+    transform: translateX(calc(200% + 40px));
+    opacity: 0;
+  }
+  2% {
+    opacity: 0;
+  }
+  11% {
+    transform: translateX(calc(200% + 40px));
+    opacity: 0;
+  }
+  12% {
+    transform: translateX(calc(200% + 40px));
+    opacity: 1;
+  }
+  56% {
+    transform: translateX(0%);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(calc(-200% - 40px));
+    opacity: 1;
+  }
+}
+
+@keyframes shake {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-30px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.shake {
+  animation: shake 3s infinite;
+  animation-duration: calc(var(--duration) * 1ms);
+  animation-delay: var(--delay);
+}
