--- a/src/css/index.css
+++ b/src/css/index.css
@@ -23,18 +23,23 @@ body {
   background-color: #242424;
 }
 
-.no-scrollbar::-webkit-scrollbar {
-  display: none;
+.no-scroll {
+  overflow: hidden;
+  height: 100%;
 }
 
-ul > li {
-  margin-bottom: 4px;
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .no-scrollbar {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+}
+
+ul > li {
+  margin-bottom: 4px;
 }
 
 .git-bg-variable {
