--- a/src/css/index.css
+++ b/src/css/index.css
@@ -42,6 +42,17 @@ ul > li {
   margin-bottom: 4px;
 }
 
+ol > li {
+  font-weight: 500;
+}
+
+div > h3 {
+  margin-top: 1rem;
+  font-size: 1.25rem /* 20px */;
+  line-height: 1.75rem /* 28px */;
+  font-weight: 700;
+}
+
 .git-bg-variable {
   border-radius: 0.375rem;
   background-color: #7d828abe;
